--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
             <h4 class="alert-heading">Hey!</h4>
             <p>The data is loading! it might take some time.</p>
             <hr>
-            <p class="mb-0">Products with more reviews might take longer to load.</p>
+            <p class="mb-0">This is an analysis of the first 100 (or less) reviews</p>
         </div>
 
 </form>
